--- a/EmployeePayroll/pages/homePage.html
+++ b/EmployeePayroll/pages/homePage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -39,5 +39,8 @@
             </div>
         </div> 
         <script src ="../js/home.js"></script> 
+        <script src="../js/utility.js"></script>
+        <script src="../js/site-properties.js"></script>
+        <script src="../js/EmployeePayrollData.js"></script>
     </body>
 </html>
